- Improved GD extension: (Pierre)
  . Added a weak/tolerant mode to the JPEG loader.
  . Added filtering mode option to imagepng() to allow reducing file size.
  . Fixed imagecolorallocate() and imagecolorallocatelapha() to return FALSE
    on error.
- Changed get_headers() to retrieve headers also from non-200 responses. (Ilia)
- Changed get_headers() to use the default context. (Ilia)
- Added support for exif date format in strtotime(). (Derick)
- Added a check for special characters in the session name. (Ilia)
- Added "consumed" stream filter. (Marcus)
- Added new mysqli constants for BIT and NEW_DECIMAL field types:
  MYSQLI_TYPE_NEWDECIMAL and MYSQLI_TYPE_BIT. FR #36007. (Georg)
- Added imap_savebody() that allows message body to be written to a file.
  (Mike)
- Fixed issue with iconv_mime_decode where the "encoding" would only allow
  upper case specifiers. (Derick)
- Fixed tiger hash algorithm generating wrong results on big endian platforms.
  (Mike)
- Fixed crash with DOMImplementation::createDocumentType("name:"). (Mike)
- Fixed bug #36611 (assignment to SimpleXML object attribute changes argument 
  type to string). (Tony)
- Fixed bug #36606 (pg_query_params() changes arguments type to string). (Tony)
- Fixed bug #36599 (DATE_W3C format constant incorrect). (Derick)
- Fixed bug #36575 (SOAP: Incorrect complex type instantiation with
  hierarchies). (Dmitry)
- Fixed bug #36572 (Added PDO::MYSQL_ATTR_DIRECT_QUERY constant that should be
  set when executing internal queries like "show master status" via MySQL).
  (Ilia)
- Fixed bug #36510 (strtotime() fails to parse date strings with tabs). (Ilia,
  Derick)
- Fixed bug #36459 (Incorrect adding PHPSESSID to links, which contains \r\n).
  (Ilia)
- Fixed bug #36458 (sleep() accepts negative values). (Ilia)
- Fixed bug #36436 (DBA problem with Berkeley DB4). (Marcus)
- Fixed bug #36434 (Improper resolution of declaring class name of an inherited
  property). (Ilia)