@@ -483,6 +483,7 @@ isascii \
 link \
 localtime_r \
 lockf \
+lchown \
 lrand48 \
 memcpy \
 memmove \
